fixed overflow to auto

--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -14,7 +14,7 @@ header, #logo-cont, footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  overflow: scroll;
+  overflow: auto;
   position: relative;
   z-index: 2;
 }
